examples/test/testpolicy2317.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2317
  namespace: namespace434
spec:
  podSelector:
    matchLabels:
      key46: value42
      key22: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value27
          key38: value39
          key11: value27
      podSelector:
        matchLabels:
          key25: value34
